--- a/resume.css
+++ b/resume.css
@@ -28,6 +28,7 @@ body {
 
 .about-me hr {
   border: 1px solid black;
+  max-width: 485px;
 }
 
 .about-me .ocupation {
@@ -37,7 +38,7 @@ body {
 .contact {
   display: flex;
   font-size: 20px;
-  line-height: 35px;
+  line-height: 45px;
 }
 
 .contact b,a {
